k8s/ingress/orderer0.yaml
#host: operations.orderer0.dummy.com
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: orderer0-dummy-com
  namespace: dummy-com
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # no limit
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # orderer should teminate the ssl traffic
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/enable-http2: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
#    - host: orderer0.dummy.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: orderer0-dummy-com
#                port:
#                  name: admin
#    - host: operations.orderer0.dummy.com
#      http:
#        paths:
#          - path: /healthz
#            pathType: Exact
#            backend:
#              service:
#                name: orderer0-dummy-com
#                port:
#                  name: operations
    - host: peer0.org1.dummy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: peer0-org1-dummy-com
                port:
                  name: listen
    - host: operations.peer0.org1.dummy.com
      http:
        paths:
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: peer0-org1-dummy-com
                port:
                  name: operations
  defaultBackend:
    service:
      name: peer0-org1-dummy-com
      port:
        number: 7051
  tls:
  - hosts:
    - peer0.org1.dummy.com
    secretName: grpc-secret
#  tls:
#    - hosts:
#        - orderer0.dummy.com
#        - peer0.org1.dummy.com
