k8s/ingress/orderer1.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: orderer1-dummy-com
  namespace: dummy-com
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # no limit
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # orderer should teminate the ssl traffic
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
#    nginx.ingress.kubernetes.io/enable-http2: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: peers.org1.dummy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: peer1-org1-dummy-com
                port:
                  name: listen
#  defaultBackend:
#    service:
#      name: peer1-org1-dummy-com
#      port:
#        number: 7051
#  tls:
#  - hosts:
#    - peers.org1.dummy.com
#    secretName: grpc-secret
